[project]
name = "agent-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.1",
    "getchar>=2.0.0",
    "openai-agents[voice]>=0.0.17",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "sounddevice>=0.5.2",
]
